--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
     <title>Welcome tos Homepage!</title>
     <style>
+        button {
+            background-color:purple;
+        }
         body{
             background-color: blue;
             font:Garamond;
@@ -29,8 +32,9 @@
             <li>trikolby01@spectrumhighschool.org</li>
         </ul>
         <h2>More content being added weekly!!!</h2>
+        <h1><strong>While you're waiting...</strong></h1>
+        <button type="button">Click Me!</button>
 
-        
         
     </body>    
 </html>
