--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <head>
     </head>
     <style>
-        .button{
-            height: 100px;
-            width: 100px;
-            margin-top: 30px;
-        }
         button {
             height:100px;
-            width:200px;
+            width:400px;
             background-color:purple;
             cursor:pointer;
+            text-align:center;
+            border-radius:15%;
         }
         body{
             background-color: blue;
             font:Garamond;
             color: yellow;
+            text-align:center;
         }
         .profilepic {
             width:200px ;
@@ -39,13 +37,13 @@
 
         
         <h1>Welcome to my homepage!!</h1>
-        <h1>Week 1, release 4</h1>
+        <h1>Week 1, release 5</h1>
 
         <h2>Hi my name is Jb
             You can contact me at...</h2>
         <ul>
-            <li>tristinkolby@gmail.com</li>
-            <li>trikolby01@spectrumhighschool.org</li>
+            <h2>tristinkolby@gmail.com<h2>
+            <h2>trikolby01@spectrumhighschool.org<h2>
         </ul>
         <h2>More content being added weekly!!!</h2>
         <h1><strong><em><highlight>While you're waiting...</highlight></em></strong></h1>
