--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="colorchange" >A collection of mini projects</button>
         </a>
         <a href="snake.html">
-            <button class="colorchange" >My 1st project</button>
+            <button class="colorchange" >My 2rd project</button>
         </a>
         <div class = "button">
             
