--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <section class = "hidden">
     <h1>Welcome to my website</h1>
-    <p>Hello, my name is Tristin. I'm a web developer, founder and teacher of spectrum middle school technology club, with lots of expirience with HTML, CSS, and Javascript</p>
+    <p>Hello, my name is Tristin. I'm a web developer, founder and teacher of spectrum middle school technology club, who loves energy drinks and has lots of expirience with HTML, CSS, and Javascript</p>
 </section>
 
 <section class = "hidden">
@@ -40,11 +40,10 @@
     </nav>
 </section>
 <section class = "hidden">
-    <h1>With the help of a few thousand energy drinks, I can achieve anything</h1>
+    <h1>Contact me to hire me for any Job, looking for expirience in web development!!!/h1>
 </section>
 
-<section>lower-section</section>
-<footer>footer</footer>
+
 
     
     
