--- a/index.html
+++ b/index.html
@@ -29,12 +29,8 @@
     <li>        <a href="test.html">
         <button class="colorchange" >My 1st project</button>
     </a></li>
-
-        <li><a href="Faketest.html">
-            <button class="colorchange" >A collection of mini projects</button>
-        </a></li>
         <li><a href="snake.html">
-            <button class="colorchange" >My 2rd project</button>
+            <button class="colorchange" >My game project</button>
         </a></li>
     </ul>
     </nav>
