--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
 </section>
 <section class = "hidden">
-    <h1>Contact me to hire me for any Job, looking for expirience in web development!!!/h1>
+    <h1>Contact me to hire me for any Job, looking for expirience in web development!!!</h1>
 </section>
 
 
