--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="my_style.css">
     <script defer src = "sidescroll.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
