--- a/CumCremer.html
+++ b/CumCremer.html
@@ -18,7 +18,7 @@
                     <li><a href = "SobrietySucks.html" class = "home">HOME</a></li>
                     <li><a href = "CumCremer.html" class = "home">ABOUT</a></li>
                     <li><a href = "RopeAnime.html" class = "home">HALL OF FAME</a></li>
-                    <li><a href = "" class = "home">CONTACT</a></li>
+                    <li><a href = "contact.html" class = "home">CONTACT</a></li>
                 </ul>
             </div>
         </nav>
