--- a/CumCremer.html
+++ b/CumCremer.html
@@ -30,8 +30,7 @@ html {
 <h1>Forever Yours and at your service, Tristin C. Kolby.</h1>
 <p>Tutor, Teacher, Developer, Designer, Programmer, Writer, Student, and all around great person. I am Tristin Kolby. Anything you want me to comission, art,
     animation, games, websites, programming, homework. I do a TON of shit. Anything you want me to do, I probably have a little bit of experience with it. Listen,
-    this is just gonna be a wall of text. There is no fancy or fun animations like right here. So who even am I? I'm not gonna give away too many details about 
-    who I am, because I don't wanna give way my social security number lol. But I'm just your regular 17 year old. This website is just kind of a lowkey/laid back 
+    this is just gonna be a wall of text. There is no fancy or fun animations like right here. I'm just your regular 17 year old. This website is just kind of a lowkey/laid back 
     little homebase for all of my projects and cool stuff i wanna show off. 
 </p>
 
