--- a/CumCremer.html
+++ b/CumCremer.html
@@ -15,7 +15,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href = "SobrietySucks.html" class = "home">HOME</a></li>
+                    <li><a href = "index.html" class = "home">HOME</a></li>
                     <li><a href = "CumCremer.html" class = "home">ABOUT</a></li>
                     <li><a href = "RopeAnime.html" class = "home">HALL OF FAME</a></li>
                     <li><a href = "contact.html" class = "home">CONTACT</a></li>
