--- a/CumCremer.html
+++ b/CumCremer.html
@@ -27,12 +27,8 @@ html {
     color:white;
 }
 </style>
-<h1>Forever Yours and at your service, Tristin C. Kolby.</h1>
-<p>Tutor, Teacher, Developer, Designer, Programmer, Writer, Student, and all around great person. I am Tristin Kolby. Anything you want me to comission, art,
-    animation, games, websites, programming, homework. I do a TON of shit. Anything you want me to do, I probably have a little bit of experience with it. Listen,
-    this is just gonna be a wall of text. There is no fancy or fun animations like right here. I'm just your regular 17 year old. This website is just kind of a lowkey/laid back 
-    little homebase for all of my projects and cool stuff i wanna show off. 
-</p>
+<h1>All about my plans and new projects</h1>
+<p>Right now our projects are going pretty well. Hopefully my new website should be up and running by Jul 20th, demo version coming soon!! Teaching technology website is still on the backburnere but we'll get to that soon  Currently in the designing and planning stage of my shitty mobile game w/ Mr. Frishholdz. </p>
 
 
 
