--- a/Playground.html
+++ b/Playground.html
@@ -291,7 +291,7 @@ if (screen.width > 600) {
     <h1>Kolby</h1>
     </div>
       <div class="right">
-        <p class = "bio">Tristin Kolby. I make shitty projects on the internet. I write poetry, produce websites. I have limited knowledge with a shit ton of front-end libraries. I listen to heavy metal. I'm really good at tutoring, with a high amount of expiriences and satisfied clientelle to back it up. If you need someoen to make a fun/charming/interesting website for you, or you want to learn how to do that just contact me. I will work on any projects for free, or an extremely cheap price. Whatever you need, I've got you. Also this color theory shit SLAPS. I have an ungodly talent for designing things, pairing that with my developer skills I am a great option for any project you need.  
+        <p class = "bio"> Hi! My name is Tristin Kolby, I like to make drawings, paintings, clothes, stuffed animals, dolls, and write poetry. In march 2025, I'll be uploading all of my favorite art projects and poetry that I've written, see you soon :) 
     </p>
       </div>
     </div>
