--- a/members.html
+++ b/members.html
@@ -144,19 +144,12 @@ if (screen.width > 600) {
 
 <div id = "cum" class="carousel slide" data-bs-ride="carousel">
 
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-            <a href = "slanderstories.html"><h1>TripTopia, FLASHING LIGHTS</h1> </a>
-            <p>In an ambitious crossover event that nobody could've predicted, Tristin teamed up with some... <i>Unorthodox Clientelle</i> to bring you the trippiest, coolest, most spiritual expirience you can imagine. Sit back, relax, and enjoy the ride. </p>
+      <div class="carousel-item">
+           <p> Not much to see here, check back later :) </p>
     </div>
 
       <div class="carousel-item">
-           <a href = "backburners.html"><h1>The Backburners</h1></a> 
-           <p>Just a list comprised of some concepts, ideas, and things I should make. Just a small, tiny, little sneak peek at what I have planned next/some things I'm thinking of.  </p>
-    </div>
-
-      <div class="carousel-item">
-           <a href = "http://lhohq.info/"><h1>My Favorite Website XD</h1></a> 
+           <a href = "https://dribbble.com/shots/3573285-Quick-Draw-Logo"><h1>My Favorite Website XD</h1></a> 
            <p>I'm just putting this here to show that I know how to do a carosel, but I need to work on some more projects. This is just a link to a weird little website a friend found. I LOVE this, it's so disorienting, weird, and unique. I love it.</p>
 
        </div>
